--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 		<title>404</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://www.jaredzhao.com/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="https://www.jaredzhao.com/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
 
