--- a/404.html
+++ b/404.html
@@ -15,12 +15,12 @@
 				<!-- Main -->
 					<section id="main" class="scaled">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="https://www.jaredzhao.com/images/avatar.jpg" alt="" /></span>
 							<h1>404</h1>
                             <p>Looks like something went wrong :'(</p>
                         </header>
                         <ul class="actions">
-                            <li><a href="index.html" class="button">Return</a></li>
+                            <li><a href="https://www.jaredzhao.com/" class="button">Return</a></li>
                         </ul>
                         <!--
                         <ul class="actions">
