--- a/bodo/index.html
+++ b/bodo/index.html
@@ -254,6 +254,41 @@
                 </p>
               </div>
               <div class="col-md-9 content-right">
+                <a href="../images/bg.gif">
+                  <div class="wrap-card">
+                    <div class="card">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <h2 class="year">
+                            2017 - PRESENT
+                          </h2>
+                          <p class="job">
+                            Computer Science, B.A.
+                          </p>
+                          <p class="company">
+                            University of California, Berkeley
+                          </p>
+                          <hr>
+                          <div class="text-detail">
+                            <p>
+                              Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanita per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes.
+                            </p>
+                          </div>
+                        </div>
+                        <ul class="portfolio-image">
+                          <li class="col-md-6">
+                            <img alt="image" src="../images/bg.gif"/>
+                          </li>
+                        </ul>
+                        <ul class="portfolio-image">
+                          <li class="col-md-6">
+                            <img alt="image" src="../images/kingdom_dash.jpg"/>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </a>
                 <!--PORTFOLIO IMAGE-->
                 <ul class="portfolio-image">
                   <li class="col-md-6">
