working on portfolio section

--- a/bodo/index.html
+++ b/bodo/index.html
@@ -97,7 +97,9 @@
             <div class="row">
               <div class="wrap-hero-content">
                   <div class="hero-content">
-                    <h1>Hello World</h1>
+                    <h1>
+                      Hello World
+                    </h1>
                     <br>
                     <span class="typed"></span>
                   </div>
@@ -194,66 +196,25 @@
                     </div>
                   </div>
                 </div>
-
-                <!-- <div class="col-md-12">
-                  <div class="wrap-about">
-                    <div class="w-content">
-                      <p class="head-about">
-                        The Pessimist sees difficulty in every opportunity. The Optimist sees opportunity in every difficulty.
-                      </p>
-                      <h5 class="name">
-                        Winston Churchill
-                      </h5>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-12">
-                  <div class="wrap-about">
-                    <div class="w-content">
-                      <p class="head-about">
-                        Design is not just what it looks like and feels like. Design is how it works. Innovation distinguishes between a leader and a follower. I want to put a ding in the universe.
-                      </p>
-                      <h5 class="name">
-                        Steve Jobs
-                      </h5>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-12">
-                  <div class="wrap-about">
-                    <div class="w-content">
-                      <p class="head-about">
-                        It’s not enough to be against something. You have to be for something better.
-                      </p>
-                      <h5 class="name">
-                        Tony Stark
-                      </h5>
-                    </div>
-                  </div>
-                </div> -->
-                
               </div>
-              <!--/.OWL CAROUSEL2 END-->
             </div>
           </div>
         </section>
         <!--/.ABOUT END-->
 
         <!--PORTFOLIO-->
-        <section class="grey-bg mar-tm-10" id="portfolio">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-3">
-                <h3 class="title-small">
-                  <span>Portfolio</span>
-                </h3>
-                <p class="content-detail">
-                  Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br><br>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros.
-                </p>
-              </div>
-              <div class="col-md-9 content-right">
+        <section class="grey-bg" id="portfolio">
+          <div class="row">
+            <!-- <div class="col-md-3">
+              <h3 class="title-small">
+                <span>Portfolio</span>
+              </h3>
+              <p class="content-detail">
+                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br><br>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros.
+              </p>
+            </div> -->
+            <div class="content-right">
+              <div class="col-md-6">
                 <a href="../images/bg.gif">
                   <div class="wrap-card">
                     <div class="card">
@@ -275,89 +236,103 @@
                             </p>
                           </div>
                         </div>
-                        <ul class="portfolio-image">
-                          <li class="col-md-6">
-                            <img alt="image" src="../images/bg.gif"/>
-                          </li>
-                        </ul>
-                        <ul class="portfolio-image">
-                          <li class="col-md-6">
-                            <img alt="image" src="../images/kingdom_dash.jpg"/>
-                          </li>
-                        </ul>
+                        <div class="col-md-6">
+                          <img alt="image" src="images/castle_blitz.gif"/>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </a>
-                <!--PORTFOLIO IMAGE-->
-                <ul class="portfolio-image">
-                  <li class="col-md-6">
-                    <a href="images/bw-1.png"><img alt="image" src="images/bw-1.png">
-                      <div class="decription-wrap">
-                        <div class="image-bg">
-                           <p class="desc">My Resume</p>
-                        </div>
-
-                      </div>
-                    </a>
-                  </li>
-                  <li class="col-md-6">
-                    <a href="images/bw-2.png"><img alt="image" src="images/bw-2.png">
-                      <div class="decription-wrap">
-                        <div class="image-bg">
-                          <p class="desc">
-                            Pangirutan
+              </div>
+              <div class="col-md-6">
+                <a href="../images/bg.gif">
+                  <div class="wrap-card">
+                    <div class="card">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <h2 class="year">
+                            2017 - PRESENT
+                          </h2>
+                          <p class="job">
+                            Computer Science, B.A.
                           </p>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="col-md-6">
-                    <a href="images/bw-3.png"><img alt="image" src="images/bw-3.png">
-                      <div class="decription-wrap">
-                        <div class="image-bg">
-                          <p class="desc">
-                            Black Mug
+                          <p class="company">
+                            University of California, Berkeley
                           </p>
+                          <hr>
+                          <div class="text-detail">
+                            <p>
+                              Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanita per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes.
+                            </p>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <img alt="image" src="images/mimosas.jpg"/>
                         </div>
                       </div>
-                    </a>
-                  </li>
-                  <li class="col-md-6">
-                    <a href="images/bw-4.png"><img alt="image" src="images/bw-4.png">
-                      <div class="decription-wrap">
-                        <div class="image-bg">
-                          <p class="desc">
-                            Notebook Mockup
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-6">
+                <a href="../images/bg.gif">
+                  <div class="wrap-card">
+                    <div class="card">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <h2 class="year">
+                            2017 - PRESENT
+                          </h2>
+                          <p class="job">
+                            Computer Science, B.A.
                           </p>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="col-md-6">
-                    <a href="images/bw-5.png"><img alt="image" src="images/bw-5.png">
-                      <div class="decription-wrap">
-                        <div class="image-bg">
-                          <p class="desc">
-                            Presentation
-                          </p>  
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="col-md-6">
-                    <a href="images/bw-6.png"><img alt="image" src="images/bw-6.png">
-                      <div class="decription-wrap">
-                        <div class="image-bg">
-                          <p class="desc">
-                            Letter Branding
+                          <p class="company">
+                            University of California, Berkeley
                           </p>
+                          <hr>
+                          <div class="text-detail">
+                            <p>
+                              Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanita per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes.
+                            </p>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <img alt="image" src="images/kingdom_dash.jpg"/>
                         </div>
                       </div>
-                    </a>
-                  </li>
-                </ul>
-                <!--/.PORTFOLIO IMAGE END-->
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-6">
+                <a href="../images/bg.gif">
+                  <div class="wrap-card">
+                    <div class="card">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <h2 class="year">
+                            2017 - PRESENT
+                          </h2>
+                          <p class="job">
+                            Computer Science, B.A.
+                          </p>
+                          <p class="company">
+                            University of California, Berkeley
+                          </p>
+                          <hr>
+                          <div class="text-detail">
+                            <p>
+                              Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanita per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes.
+                            </p>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <img alt="image" src="images/nimbleats.jpg"/>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
