--- a/bodo/index.html
+++ b/bodo/index.html
@@ -203,7 +203,7 @@
         <!--/.ABOUT END-->
 
         <!--PORTFOLIO-->
-        <section class="grey-bg" id="portfolio">
+        <section class="grey-bg mar-tm-10" id="portfolio">
           <div class="row">
             <!-- <div class="col-md-3">
               <h3 class="title-small">
