added resume and skills

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 
     <!--HEADER -->
     <div class="header">
-      <!-- <div class="for-sticky">
+      <div class="for-sticky">
         <div class="col-md-2 col-xs-6 logo">
-          <a href="index.html"><img alt="logo" class="logo-nav" src="images/logo2.png"></a>
+          <!-- <a href="index.html"><img alt="logo" class="logo-nav" src="images/logo2.png"></a> -->
         </div>
-      </div> -->
-      <div class="menu-wrap">
+      </div>
+      <!-- <div class="menu-wrap">
         <nav class="menu">
           <div class="menu-list">
-            <a data-scroll="" href="#home" class="active">
+            <a data-scroll="" href="#intro" class="active">
               <span>Home</span>
             </a>
             <a data-scroll="" href="#about">
@@ -54,23 +54,11 @@
             <a data-scroll="" href="#portfolio">
               <span>Portfolio</span>
             </a>
-             <a data-scroll="" href="#services">
-              <span>Services</span>
-            </a>
-            <a data-scroll="" href="#employement">
-              <span>Employement</span>
-            </a>
-            <a data-scroll="" href="#skill">
+            <a data-scroll="" href="#skills">
               <span>Skills</span>
             </a>
-            <a data-scroll="" href="#education">
-              <span>Education</span>
-            </a>
-            <a data-scroll="" href="#testimonial">
-              <span>Testimonial</span>
-            </a>
-            <a data-scroll="" href="#blog">
-              <span>Blog</span>
+            <a data-scroll="" href="#resume">
+              <span>Resume</span>
             </a>
             <a data-scroll="" href="#contact">
               <span>Contact</span>
@@ -78,11 +66,11 @@
           </div>
         </nav>
         <button class="close-button" id="close-button">Close Menu</button>
-      </div>
+      </div> -->
       <button class="menu-button" id="open-button">
+        <!-- <span></span>
         <span></span>
-        <span></span>
-        <span></span>
+        <span></span> -->
       </button>
     </div>
     <!--/.HEADER END-->
@@ -121,7 +109,6 @@
             <div class="row">
               <!--OWL CAROUSEL2-->
               <div class="owl-carousel2">
-
                 <div class="col-md-12">
                   <div class="wrap-about">
                     <div class="w-content">
@@ -204,160 +191,154 @@
 
         <!--PORTFOLIO-->
         <section class="grey-bg mar-tm-10" id="portfolio">
-          <div class="row">
-            <!-- <div class="col-md-3">
-              <h3 class="title-small">
-                <span>Portfolio</span>
-              </h3>
-              <p class="content-detail">
-                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br><br>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros.
-              </p>
-            </div> -->
-            <div class="content-right">
-              <div class="col-md-6">
-                <a href="">
-                  <div class="wrap-card">
-                    <div class="card">
-                      <div class="row">
-                        <div style="min-height:425px" class="col-md-6">
-                          <h2 class="year">
-                            Castle Blitz
-                          </h2>
-                          <p class="job">
-                            Java, OpenGL, iOS, Android
-                          </p>
-                          <hr>
-                          <div class="text-detail">
-                            <p>
-                              Castle Blitz is a turn-based online multiplayer strategy game that I developed from scratch in Java. 
-                              I have always been fascinated by game engine development -- it's a delicate balance of complexity and 
-                              performance coupled with artistic expression.
+          <div class="container">
+            <div class="row">
+              <div class="content-right">
+                <div class="col-md-6">
+                  <a href="">
+                    <div class="wrap-card">
+                      <div class="card">
+                        <div class="row">
+                          <div style="min-height:425px" class="col-md-6">
+                            <h2 class="year">
+                              Castle Blitz
+                            </h2>
+                            <p class="job">
+                              Java, OpenGL, iOS, Android
                             </p>
+                            <hr>
+                            <div class="text-detail">
+                              <p>
+                                Castle Blitz is a turn-based online multiplayer strategy game that I developed from scratch in Java. 
+                                I have always been fascinated by game engine development -- it's a delicate balance of complexity and 
+                                performance coupled with artistic expression.
+                              </p>
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-md-6">
-                          <img alt="image" src="images/castle_blitz.gif"/>
+                          <div class="col-md-6">
+                            <img alt="image" src="images/castle_blitz.gif"/>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a href="https://www.polyture.com">
-                  <div class="wrap-card">
-                    <div class="card">
-                      <div class="row">
-                        <div style="min-height:425px" class="col-md-6">
-                          <h2 class="year">
-                            Polyture
-                          </h2>
-                          <p class="job">
-                            Java Script, React, Python
-                          </p>
-                          <hr>
-                          <div class="text-detail">
-                            <p>
-                              Polyture is an interactive big data analytics platform designed to speed up the data processing pipeline 
-                              and allow data scientists to "touch" their data. I'm currently working on this at the Berkeley Skydeck 
-                              startup incubator. 
+                  </a>
+                </div>
+                <div class="col-md-6">
+                  <a href="https://www.polyture.com">
+                    <div class="wrap-card">
+                      <div class="card">
+                        <div class="row">
+                          <div style="min-height:425px" class="col-md-6">
+                            <h2 class="year">
+                              Polyture
+                            </h2>
+                            <p class="job">
+                              Java Script, React, Python
                             </p>
+                            <hr>
+                            <div class="text-detail">
+                              <p>
+                                Polyture is an interactive big data analytics platform designed to speed up the data processing pipeline 
+                                and allow data scientists to "touch" their data. I'm currently working on this at the Berkeley Skydeck 
+                                startup incubator. 
+                              </p>
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-md-6">
-                          <img alt="image" src="images/polyture.png"/>
+                          <div class="col-md-6">
+                            <img alt="image" src="images/polyture.png"/>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a href="">
-                  <div class="wrap-card">
-                    <div class="card">
-                      <div class="row">
-                        <div style="min-height:425px" class="col-md-6">
-                          <h2 class="year">
-                            Kingdom Dash
-                          </h2>
-                          <p class="job">
-                            Java, OpenGL, iOS, Android
-                          </p>
-                          <hr>
-                          <div class="text-detail">
-                            <p>
-                              Kingdom Dash is a game built on top of a 2D game engine that I designed and developed. It includes custom 
-                              animation, physics simulation, and other gameplay features. The game engine is cross-platform, and can 
-                              compile to any desktop (Linux, macOS, Windows) or mobile (iOS, Android) platform.
+                  </a>
+                </div>
+                <div class="col-md-6">
+                  <a href="">
+                    <div class="wrap-card">
+                      <div class="card">
+                        <div class="row">
+                          <div style="min-height:425px" class="col-md-6">
+                            <h2 class="year">
+                              Kingdom Dash
+                            </h2>
+                            <p class="job">
+                              Java, OpenGL, iOS, Android
                             </p>
+                            <hr>
+                            <div class="text-detail">
+                              <p>
+                                Kingdom Dash is a game built on top of a 2D game engine that I designed and developed. It includes custom 
+                                animation, physics simulation, and other gameplay features. The game engine is cross-platform, and can 
+                                compile to any desktop (Linux, macOS, Windows) or mobile (iOS, Android) platform.
+                              </p>
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-md-6">
-                          <img alt="image" src="images/kingdom_dash.jpg"/>
+                          <div class="col-md-6">
+                            <img alt="image" src="images/kingdom_dash.jpg"/>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a href="https://complexity.berkeley.edu/mimosas/">
-                  <div class="wrap-card">
-                    <div class="card">
-                      <div class="row">
-                        <div style="min-height:425px" class="col-md-6">
-                          <h2 class="year">
-                            MIMOSAS
-                          </h2>
-                          <p class="job">
-                            Python
-                          </p>
-                          <hr>
-                          <div class="text-detail">
-                            <p>
-                              MIMOSAS is an end-to-end modular data processing and machine learning analytics suite of algorithms developed for 
-                              Nuclear Security applications. I was the primary author of this software package at the Complexity Group at the 
-                              University of California, Berkeley.
+                  </a>
+                </div>
+                <div class="col-md-6">
+                  <a href="https://complexity.berkeley.edu/mimosas/">
+                    <div class="wrap-card">
+                      <div class="card">
+                        <div class="row">
+                          <div style="min-height:425px" class="col-md-6">
+                            <h2 class="year">
+                              MIMOSAS
+                            </h2>
+                            <p class="job">
+                              Python
                             </p>
+                            <hr>
+                            <div class="text-detail">
+                              <p>
+                                MIMOSAS is an end-to-end modular data processing and machine learning analytics suite of algorithms developed for 
+                                Nuclear Security applications. I was the primary author of this software package at the Complexity Group at the 
+                                University of California, Berkeley.
+                              </p>
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-md-6">
-                          <img alt="image" src="images/mimosas.jpg"/>
+                          <div class="col-md-6">
+                            <img alt="image" src="images/mimosas.jpg"/>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a href="">
-                  <div class="wrap-card">
-                    <div class="card">
-                      <div class="row">
-                        <div style="min-height:425px" class="col-md-6">
-                          <h2 class="year">
-                            Nimbleats
-                          </h2>
-                          <p class="job">
-                            Java Script, React Native
-                          </p>
-                          <hr>
-                          <div class="text-detail">
-                            <p>
-                              Nimbleats is a mobile food ordering platform that I co-founded, designed, developed, and raised a pre-seed round 
-                              for. At its peak, we had 9 restaurants on our platform in UC Berkeley's surrounding area. Though now defunct, my 
-                              partner and I learned many lessons from its failure.
+                  </a>
+                </div>
+                <div class="col-md-6">
+                  <a href="">
+                    <div class="wrap-card">
+                      <div class="card">
+                        <div class="row">
+                          <div style="min-height:425px" class="col-md-6">
+                            <h2 class="year">
+                              Nimbleats
+                            </h2>
+                            <p class="job">
+                              Java Script, React Native
                             </p>
+                            <hr>
+                            <div class="text-detail">
+                              <p>
+                                Nimbleats is a mobile food ordering platform that I co-founded, designed, developed, and raised a pre-seed round 
+                                for. At its peak, we had 9 restaurants on our platform in UC Berkeley's surrounding area. Though now defunct, my 
+                                partner and I learned many lessons from its failure.
+                              </p>
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-md-6">
-                          <img alt="image" src="images/nimbleats.jpg"/>
+                          <div class="col-md-6">
+                            <img alt="image" src="images/nimbleats.jpg"/>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -594,7 +575,7 @@
         <!--/.EMPLOYEMENT END-->
 
         <!--SKILLS-->
-        <!-- <section class="white-bg" id="skill">
+        <section class="white-bg" id="skill">
           <div class="container">
             <div class="row">
               <div class="col-md-3">
@@ -607,6 +588,7 @@
                 </p>
               </div>
               <div class="col-md-9 content-right">
+                <!--SKILLST-->
                 <div class="skillst">
                   <div class="skillbar" data-percent="85%">
                     <div class="title head-sm">
@@ -649,10 +631,11 @@
                     </div>
                   </div>
                 </div>
+                <!--/.SKILLST END-->
               </div>
             </div>
           </div>
-        </section> -->
+        </section>
         <!--/.SKILLS END-->
 
         <!--EDUCATION-->
@@ -896,6 +879,27 @@
         </section> -->
         <!--/.BLOG END-->
 
+        <section class="grey-bg" id="resume">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3">
+              </div>
+              <div class="col-md-6 content-right">
+                <!-- <div style="width: 80%; padding-top: 150%">
+                  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+                    <object style="width: 100%; height: 100%;" type="application/pdf" data="files/Jared_Zhao_Resume.pdf?#scrollbar=0&toolbar=0&navpanes=0">
+                      <p>PDF cannot be displayed.</p>
+                    </object>
+                  </div>
+                </div> -->
+                <img alt="image" src="files/Jared_Zhao_Resume.jpg"/>
+              </div>
+              <div class="col-md-3">
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!--CONTACT-->
         <section id="contact" class="white-bg">
           <div class="container">
@@ -970,16 +974,16 @@
     <script src="js/typed.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
     
-    <script src="dist/three.min.js"></script>
-    <script src="dist/vanta.birds.min.js"></script>
+    <script src="dist/three.min.js" type="text/javascript"></script>
+    <script src="dist/vanta.birds.min.js" type="text/javascript"></script>
     <script>
-    VANTA.BIRDS({
-      el: "#intro",
-      backgroundColor: 0xffffff,
-      color1: 0x2c00ff,
-      speedLimit: 5.00,
-      quantity: 4.00
-    })
+      VANTA.BIRDS({
+        el: "#intro",
+        backgroundColor: 0xffffff,
+        color1: 0x2c00ff,
+        speedLimit: 5.00,
+        quantity: 4.00
+      })
     </script>
   </body>
 </html>
